<resources>
    <string name="app_name">Note</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Task">Task</string>
    <string name="Profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="send">Отпрвить код</string>
    <string name="number">Введите номер телефона</string>
    <string name="fragment_phone">fragment_phone</string>
    <string name="accept_fragment">AcceptFrgment</string>
</resources>